--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -162,54 +162,58 @@
           <p class="portfolio__text">Magnis modipsae que voloratati
              andigen daepeditem quiate re porem aut labor.</p>
                        
-          <div class="wrapper-flex wrapper-flex--wrap">
+          <div class="wrapper-flex">
             <div class="picture">
-              <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
-              <a href="#" class="picture__wrapper">
-                <span class="picture__wrapper-plus">+</span>
-              </a>
+              <div class="picture__wrap">
+                <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
+                <a href="#" class="picture__link">
+                  <span class="picture__link-text">+</span>
+                </a>
+              </div>
+              <div class="picture__caption">
+                <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
+                <p class="picture__text">Identity</p>
+              </div>
             </div>   
             <div class="picture">
-              <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
-              <a href="#" class="picture__wrapper">
-                <span class="picture__wrapper-plus">+</span>
-              </a> 
-            </div>
-            <div class="picture__caption">
-              <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
-              <p class="picture__text">Identity</p>
-            </div>
-            <div class="picture__caption">
-              <h1 class="picture__name">Fresh branding for a creative startup</h1>
-              <p class="picture__text">Identity</p>
-            </div>  
+              <div class="picture__wrap">
+                <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
+                <a href="#" class="picture__link">
+                  <span class="picture__link-text">+</span>
+                </a> 
+              </div>
+              <div class="picture__caption">
+                <h1 class="picture__name">Fresh branding for a creative startup</h1>
+                <p class="picture__text">Identity</p>
+              </div>
+            </div>              
           </div>
 
           <ul class="wrapper-flex wrapper-flex--portfolio-small">
             <li class="picture">
               <img class="picture__img" src="img/image-item-1.jpg">
-              <a href="#" class="picture__wrapper">
-                <span class="picture__wrapper-plus">+</span>
+              <a href="#" class="picture__link">
+                <span class="picture__link-text">+</span>
               </a> 
             </li>
             <li class="picture">
               <img class="picture__img" src="img/image-item-2.jpg">
-              <a href="#" class="picture__wrapper">
-                <span class="picture__wrapper-plus">+</span>
+              <a href="#" class="picture__link">
+                <span class="picture__link-text">+</span>
               </a>
             </li>
             <li class="picture">
               <img class="picture__img" src="img/image-item-3.jpg">
-              <a href="#" class="picture__wrapper">
-                <span class="picture__wrapper-plus picture__wrapper-plus--text">
+              <a href="#" class="picture__link">
+                <span class="picture__link-text picture__link-text--small">
                   Astor & Yancy
                 </span>
               </a>
             </li>
             <li class="picture">
               <img class="picture__img" src="img/image-item-4.jpg"> 
-              <a href="#" class="picture__wrapper">
-                <span class="picture__wrapper-plus">+</span>
+              <a href="#" class="picture__link">
+                <span class="picture__link-text">+</span>
               </a>
             </li>            
           </ul> 
@@ -258,23 +262,23 @@
 
             <ul class="footer__pictures">
               <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-1.jpg">
-               <a href="#" class="picture__wrapper picture__wrapper--small">
-                  <span class="picture__wrapper-plus">+</span>
+               <a href="#" class="picture__link picture__link--small">
+                 <span class="picture__link-text">+</span>
                 </a>
               </li>
               <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-2.jpg">
-                <a href="#" class="picture__wrapper picture__wrapper--small">
-                   <span class="picture__wrapper-plus">+</span>
+                <a href="#" class="picture__link picture__link--small">
+                  <span class="picture__link-text">+</span>
                  </a>
                </li>
                <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-3.jpg">
-                <a href="#" class="picture__wrapper picture__wrapper--small">
-                   <span class="picture__wrapper-plus">+</span>
+                <a href="#" class="picture__link picture__link--small">
+                   <span class="picture__link-text">+</span>
                  </a>
                </li>
                <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-4.jpg">
-                <a href="#" class="picture__wrapper picture__wrapper--small">
-                   <span class="picture__wrapper-plus">+</span>
+                <a href="#" class="picture__link picture__link--small">
+                   <span class="picture__link-text">+</span>
                  </a>
                </li>
             </ul>
@@ -305,7 +309,6 @@
                 </a>
               </li>
             </ul>   
-
           </div>
           <div class="footer__section">
             <h1 class="footer__title">Free updates</h1>
