--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -30,7 +30,12 @@ h1 {
 }
 
 .container {
-  width: 1170px;
+  width: 100%;
+  max-width: 1170px;
   margin: 0 auto;
   padding: 0;
+
+  @media (max-width: 1200px) {
+    max-width: 992px;    
+  }
 }
