--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -1,10 +1,11 @@
 /*footer*/
 .footer {
   background-color: #2f4052;
-  font-weight: 500;
-    
+  font-weight: 500;  
+
   &__section {
-    width: 270px;
+    width: 100%;
+    max-width: 270px;
     color: #fff;
   }
 
@@ -15,7 +16,11 @@
 		line-height: 22px;
 		text-transform: uppercase;
 		letter-spacing: .1em;
-		color: #fff;
+    color: #fff;
+    
+    &--margin {
+      margin-bottom: 30px;
+    }
 	}
 
   &__logo {
@@ -55,13 +60,12 @@
 		font-size: 15px;
 		line-height: 22px;
     letter-spacing: .02em;
-    color: #a3b1bf;
-    
+    color: #a3b1bf;    
 
     &--thick {
       font-weight: 700;
     }
-  }  
+  }
       
   &__pictures {
     display: flex;
@@ -80,7 +84,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-width: 270px; 
+  min-width: 240px;
   min-height: 40px;
   background-color: #4e5c6c;
   border-radius: 3px;
@@ -90,7 +94,7 @@
     height: 45px;
     margin-left: 5px;
     padding-right: 0;
-    border: none; 
+    border: none;
     outline: none;
     background-color: #4e5c6c;
     color: #a3b1bf;
@@ -98,11 +102,16 @@
     line-height: 22px;
     font-weight: 500;
     letter-spacing: .02em;
-    vertical-align: middle;  
+    vertical-align: middle;
+
+    @media (max-width: 1200px) {
+      min-width: 120px;
+      font-size: 10px;
+    }
   }
 
   &__btn {
-    width: 88px; 
+    min-width: 88px;
     min-height: 30px;
     margin-right: 5px;
     border: none;
@@ -128,12 +137,12 @@
 
 .page-footer {
   position: relative;
-  background-color: #283645; 
+  background-color: #283645;
 
   &__info,
   &__link {
     margin: 0;
-    color: #707e8c;  
+    color: #707e8c;
   }
 }
 
@@ -141,7 +150,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  right: 0;
+  right: 5px;
   width: 40px;
   height: 40px;
   background: rgba(80, 106, 133, .75) no-repeat 12px 15px;
@@ -152,4 +161,4 @@
   &:hover {
     opacity: .7;
   }
-}  
+}
