--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -36,6 +36,14 @@ h1 {
   padding: 0;
 
   @media (max-width: 1200px) {
-    max-width: 992px;    
+    max-width: 992px;
+  }
+
+  @media (max-width: 992px) {
+    max-width: 768px;
+  }
+
+  @media (max-width: 768px) {
+    max-width: 320px;
   }
 }
