--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -1,6 +1,6 @@
 /*figure*/
 .portfolio {
-	position: relative; 
+	position: relative;
   padding-top: 105px;
   text-align: center;
   background-color: #f2f5f7;
@@ -8,7 +8,7 @@
   &__caption {
     font-size: 44px;
     line-height: 54px;
-  }   
+  }
 
   &__text {
 		margin: 20px 0 75px;
@@ -26,6 +26,16 @@
 
   &:hover .picture__link {
     display: flex;
+  }
+  
+  &--footer {
+    width: 125px;
+    height: 85px;
+
+    @media (max-width: 1200px) {
+      width: 115px;
+      height: 78px;
+    }
   }
 
   &__wrap {
@@ -46,16 +56,17 @@
     background-color: rgba( 0, 188, 156, .7);
   }
 
-  &__img {    
+  &__img {
     display: block;
     width: 100%;
     height: 100%;
-    }
+  }
   
   &__caption {
     cursor: pointer;
-    width: 570px;
-    background-color: #fff;    
+    width: 100%;
+    max-width: 570px;
+    background-color: #fff;
   }
 
   &__name {
@@ -83,15 +94,15 @@
       font-size: 18px;
       color: #fff;
     }
-  }  
+  }
   
   &--footer {
     margin: 0;
     margin-right: 5px;
     margin-bottom: 5px;
-  } 
+  }
 }
- 
+
 .pagination-portfolio {
   position: absolute;
   right: 50%;
@@ -101,14 +112,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-          
+
   &__item {
     cursor: pointer;
     width: 15px;
     height: 15px;
     border-radius: 50%;
     background: #506a85;
-
+    
     &:hover {
       background-color: #acb7c2;
     }
@@ -134,7 +145,7 @@
 
     &:hover {
       opacity: .8;
-    } 
+    }
 
     &--left {
       background-image: url(../img/icon-left-open-mini.png);
