--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="header__wrapper">
         <div class="container">
-          <div class="wrapper-flex">
+          <div class="wrapper-flex wrapper-flex--mobile">
             <ul class="header__list">
               <li class="header__item header__item--first">
                 <a href="#">
@@ -63,18 +63,21 @@
         </div>
       </div>
       <div class="container">
-        <div class="wrapper-flex wrapper-flex--wrap wrapper-flex--header">
+        <div class="wrapper-flex wrapper-flex--header">
           <img class="header__logo" src="img/logo.svg" alt="Logo REEN">
 
-          <ul class="main-menu">
-            <li><a class="main-menu__link" href="home.html">Home</a></li>
-            <li><a class="main-menu__link" href="portfolio.html">Portfolio</a></li>
-            <li><a class="main-menu__link" href="blog.html">Blog</a></li>
-            <li><a class="main-menu__link" href="pages.html">Pages</a></li>
-            <li><a class="main-menu__link" href="features.html">Features</a></li>
-            <li><a class="main-menu__link" href="megamenu.html">Mega Menu</a></li>
-            <li><a class="main-menu__link" href="contact.html">Contact</a></li>
-          </ul>
+          <div>
+            <div class="hamburger"></div>
+            <ul class="main-menu">
+              <li><a class="main-menu__link" href="home.html">Home</a></li>
+              <li><a class="main-menu__link" href="portfolio.html">Portfolio</a></li>
+              <li><a class="main-menu__link" href="blog.html">Blog</a></li>
+              <li><a class="main-menu__link" href="pages.html">Pages</a></li>
+              <li><a class="main-menu__link" href="features.html">Features</a></li>
+              <li><a class="main-menu__link" href="megamenu.html">Mega Menu</a></li>
+              <li><a class="main-menu__link" href="contact.html">Contact</a></li>
+            </ul>
+          </div>
 
           <div class="search">
             <img class="search__img" src="img/icon-search.png" alt="Search">
@@ -248,7 +251,7 @@
             <h1 class="footer__title">Who we are</h1>
             <img class="footer__logo" src="img/footer_logo.svg" alt="footer_logo">
             <p class="footer__text footer__text--one">
-              Magnis modipsae voloratati andigen
+              Magnis modipsae voloratati andigen 
               daepeditem quiate re porem que aut
               labor. Laceaque eictemperum quiae
               sitiorem rest non restibusaes 
@@ -258,35 +261,39 @@
             </a>   
           </div>
           <div class="footer__section">
-            <h1 class="footer__title">Latest works</h1>
+            <h1 class="footer__title footer__title--margin">Latest works</h1>
 
             <ul class="footer__pictures">
-              <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-1.jpg">
-               <a href="#" class="picture__link picture__link--small">
-                 <span class="picture__link-text">+</span>
-                </a>
-              </li>
-              <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-2.jpg">
+              <li class="picture picture--footer">
+                <img class="picture__img" src="img/footer-image-1.jpg">
                 <a href="#" class="picture__link picture__link--small">
                   <span class="picture__link-text">+</span>
-                 </a>
-               </li>
-               <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-3.jpg">
+                </a>
+              </li>
+              <li class="picture picture--footer">
+                <img class="picture__img" src="img/footer-image-2.jpg">
                 <a href="#" class="picture__link picture__link--small">
-                   <span class="picture__link-text">+</span>
-                 </a>
-               </li>
-               <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-4.jpg">
+                  <span class="picture__link-text">+</span>
+                </a>
+              </li>
+              <li class="picture picture--footer">
+                <img class="picture__img" src="img/footer-image-3.jpg">
                 <a href="#" class="picture__link picture__link--small">
-                   <span class="picture__link-text">+</span>
-                 </a>
-               </li>
+                  <span class="picture__link-text">+</span>
+                </a>
+              </li>
+              <li class="picture picture--footer">
+                <img class="picture__img" src="img/footer-image-4.jpg">
+                <a href="#" class="picture__link picture__link--small">
+                  <span class="picture__link-text">+</span>
+                </a>
+              </li>
             </ul>
           </div>
           <div class="footer__section">
             <h1 class="footer__title">Get in touch</h1>
             <p class="footer__text">Doloreiur quia commolu
-              ptatemp dolupta oreprerum tibusam eumenis et consent 
+              ptatemp dolupta oreprerum tibusam eumenis<br> et consent 
               accullignis dentibea autem inisita.</p>
 
             <ul>
