--- a/src/styles/wrapper-flex.less
+++ b/src/styles/wrapper-flex.less
@@ -35,7 +35,11 @@
   }
 
   &--page-footer {
-    min-height: 83px;
+    min-height: 83px;    
     align-items: center;
+
+    @media (max-width: 992px) {
+      margin-right: 50px;
+    }
   }
 }
