--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -260,7 +260,7 @@
               <span class="footer__more-link">More about us</span>
             </a>   
           </div>
-          <div class="footer__section">
+          <div class="footer__section footer__section--second">
             <h1 class="footer__title footer__title--margin">Latest works</h1>
 
             <ul class="footer__pictures">
