--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -7,6 +7,12 @@
     width: 100%;
     max-width: 270px;
     color: #fff;
+
+    &--second {
+      @media (max-width: 992px) {
+        display: none;
+      }
+    }
   }
 
 	&__title {
@@ -107,6 +113,10 @@
     @media (max-width: 1200px) {
       min-width: 120px;
       font-size: 10px;
+    }
+
+    @media (max-width: 992px) {
+      font-size: 14px;
     }
   }
 
