--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -32,6 +32,10 @@
     letter-spacing: .06em;
     text-transform: uppercase;
     color: #fff;
+
+    @media (max-width: 768px) {
+      font-size: 56px;
+    }
     
     &--grey {
       display: inline-block;
@@ -47,6 +51,10 @@
     letter-spacing: .02em;
     font-weight: normal;
     color: #a3b1bf;
+
+    @media (max-width: 768px) {
+      font-size: 16px;
+    }
   }
 }
 
