--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -118,6 +118,10 @@
     @media (max-width: 992px) {
       font-size: 14px;
     }
+
+    @media (max-width: 768px) {
+      font-size: 10px;
+    }
   }
 
   &__btn {
