--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -11,7 +11,7 @@
     align-items: center;
 
     &--social {
-      @media (max-width: 768px) {
+      @media (max-width: 320px) {
         display: none;
       }
     }
@@ -20,10 +20,6 @@
   &__logo {
     width: 161px;
     height: 40px;
-
-    @media (max-width: 768px) {
-      order: 1;
-    }
   }
 
   &__icon {
@@ -72,6 +68,10 @@
     margin-left: 8px;
     font-weight: normal;
     font-size: 12px;
+
+    @media (max-width: 768px) {
+      font-size: 14px;
+    }
   }
 }
 
@@ -86,14 +86,10 @@
 
     @media (max-width: 992px) {
       padding: 35px 10px;
-    }
-  }
-
-  @media (max-width: 767px) {
-    display: none;
+    }    
   }
 }
-
+/*
 .hamburger {
   display: none;
   width: 50px;
@@ -103,16 +99,12 @@
   @media (max-width: 767px) {
     display: block;
   }
-}
+}*/
 
 .search {
   display: flex;
   padding: 10px;
   margin: 0;
-
-  @media (max-width: 767px) {
-    order: 2;
-  }
 
   &__img {
     width: 12px;
