--- a/src/styles/features-list.less
+++ b/src/styles/features-list.less
@@ -9,6 +9,10 @@
   letter-spacing: .01em;
   font-weight: 500;
 
+  @media (max-width: 320px) {
+    max-width: 315px;
+  }
+
   &__title {
     margin-bottom: 20px;
     font-size: 44px;
@@ -32,16 +36,30 @@
     flex-wrap: nowrap;
   }
 
+  @media (max-width: 320px) {
+    flex-direction: column;
+  }
+
   &__title {
     margin-bottom: 20px;
     font-size: 26px;
     line-height: 34px;
+
+    @media (max-width: 320px) {
+      margin-bottom: 5px;
+      margin-top: 15px;
+    }
   }
 
   &__item {
     position: relative;
-    width: 270px;
+    width: 100%;
+    max-width: 270px;
     margin-left: 90px;
+
+    @media (max-width: 320px) {
+      max-width: 200px;
+    }
     
     &::before {
       content: "";
