--- a/src/styles/wrapper-flex.less
+++ b/src/styles/wrapper-flex.less
@@ -32,6 +32,10 @@
 
   &--footer-info {
     min-height: 365px;
+
+    @media (max-width: 320px) {
+      flex-direction: column;
+    }    
   }
 
   &--page-footer {
@@ -40,6 +44,11 @@
 
     @media (max-width: 992px) {
       margin-right: 50px;
+    }
+
+    @media (max-width: 320px) {
+      flex-direction: column;
+      min-height: 45px;
     }
   }
 }
