--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -193,7 +193,7 @@
           </div>
 
           <ul class="wrapper-flex wrapper-flex--portfolio-small">
-            <li class="picture">
+            <li class="picture picture--small">
               <img class="picture__img" src="img/image-item-1.jpg">
               <a href="#" class="picture__link">
                 <span class="picture__link-text">+</span>
