1200 992 768 done, 320 in process

--- a/src/styles/cooperation.less
+++ b/src/styles/cooperation.less
@@ -5,6 +5,10 @@
   padding: 120px 0;
   text-align: center;
   background-color: #fff;
+
+  @media (max-width: 992px) {
+    padding: 90px 0;
+  }
   
   &__caption {
     font-size: 44px;
