--- a/src/styles/wrapper-flex.less
+++ b/src/styles/wrapper-flex.less
@@ -23,6 +23,10 @@
   &--portfolio-small {
     padding-top: 80px;
     padding-bottom: 200px;
+
+    @media (max-width: 992px) {
+      padding-bottom: 140px;
+    }
   }
 
   &--footer-nav {
