--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -17,6 +17,15 @@
     font-weight: normal;
     text-align: center;
     text-decoration: none;
+
+    @media(max-width: 992px) {
+      padding: 18px 50px;
+    }
+
+    @media (max-width: 320px) {
+      font-size: 9px;
+      padding: 10px 10px;
+    }
   }
 
   &--cooperation {
