--- a/src/styles/features-list.less
+++ b/src/styles/features-list.less
@@ -9,8 +9,19 @@
   letter-spacing: .01em;
   font-weight: 500;
 
+  @media (max-width: 992px) {
+    margin-top: 70px;
+    margin-bottom: 90px;
+  }
+
+  @media (max-width: 768px) {
+    max-width: 758px;
+  }
+
   @media (max-width: 320px) {
     max-width: 315px;
+    margin-top: 50px;
+    margin-bottom: 40px;
   }
 
   &__title {
@@ -18,6 +29,19 @@
     font-size: 44px;
     line-height: 54px;
     font-weight: bold;
+
+    @media (max-width: 320px) {
+      font-size: 22px;
+      line-height: 20px;
+    }
+  }
+
+  &__text {
+    @media (max-width: 320px) {
+      font-size: 18px;
+      line-height: 20px;
+    }
+
   }
 }
 
@@ -34,6 +58,8 @@
 
   @media (max-width: 1200px) {
     flex-wrap: nowrap;
+    font-size: 18px;
+    line-height: 22px;
   }
 
   @media (max-width: 320px) {
@@ -57,6 +83,11 @@
     max-width: 270px;
     margin-left: 90px;
 
+    @media (max-width: 768px) {
+      max-width: 200px;
+      margin-left: 55px;
+    }
+
     @media (max-width: 320px) {
       max-width: 200px;
     }
@@ -70,6 +101,12 @@
       height: 53px;
       background-repeat: no-repeat;
       background-position: right top;
+
+      @media (max-width: 768px) {
+        left: -55px;
+        width: 50px;
+        height: 50px;
+      }
     }
 
     &--heart::before {
