--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -5,6 +5,10 @@
   text-align: center;
   background-color: #f2f5f7;
 
+  @media (max-width: 992px) {
+    padding-top: 80px;
+  }
+
   &__caption {
     font-size: 44px;
     line-height: 54px;
@@ -15,6 +19,16 @@
     font-size: 22px;
     line-height: 34px;
     font-weight: normal;
+
+    @media (max-width: 992px) {
+      font-size: 25px;
+      margin-bottom: 45px;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 22px;
+      margin-bottom: 45px;
+    }
   }
 }
 
@@ -121,6 +135,13 @@
   justify-content: space-between;
   align-items: center;
 
+  @media (max-width: 1200px) {
+    bottom: 150px;
+  }
+
+  @media (max-width: 992px) {
+    bottom: 100px;
+  }
   @media (max-width: 320px) {
     max-width: 100px;
     bottom: 170px;
