--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -7,6 +7,14 @@
     width: 100%;
     min-height: 886px;
     background-color: #a3b1bf;
+
+    @media (max-width: 992px) {
+      min-height: 686px;
+    }
+
+    @media (max-width: 320px) {
+      min-height: 250px;
+    }
   }
 
   &__content {
@@ -33,8 +41,18 @@
     text-transform: uppercase;
     color: #fff;
 
+    @media (max-width: 992px) {
+      font-size: 58px;
+    }
+
     @media (max-width: 768px) {
       font-size: 56px;
+    }
+
+    @media (max-width: 320px) {
+      padding-bottom: 0;
+      font-size: 20px;
+      line-height: 20px;
     }
     
     &--grey {
@@ -52,8 +70,21 @@
     font-weight: normal;
     color: #a3b1bf;
 
+    @media (max-width: 992px) {
+      font-size: 22px;
+    }
+
     @media (max-width: 768px) {
-      font-size: 16px;
+      font-size: 17px;
+      line-height: 25px;
+    }
+
+    @media (max-width: 320px) {
+      max-width: 250px;
+      padding-bottom: 15px;
+      font-size: 10px;
+      line-height: 15px;
+      margin: 0;
     }
   }
 }
@@ -66,19 +97,33 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 145px;
-  height: 45px;
+  min-width: 145px;
+  min-height: 45px;
   margin: 0 auto;
   padding: 0 5px;
   border-radius: 3px;
   background-color: #fff;
+
+  @media (max-width: 768px) {
+    min-width: 125px;
+    min-height: 35px;
+  }
+  @media (max-width: 320px) {
+    min-width: 70px;
+    min-height: 30px;
+  }
   
   &__item {
     cursor: pointer;
-    width: 15px;
-    height: 15px;
+    min-width: 15px;
+    min-height: 15px;
     border-radius: 50%;
     background: #506a85;
+
+    @media (max-width: 320px) {
+      min-width: 10px;
+      min-height: 10px;
+    }
     
     &:hover {
       background-color: #acb7c2;
@@ -104,10 +149,16 @@
 
   &__icon {
     cursor: pointer;
-    width: 60px;
-    height: 60px;
+    min-width: 60px;
+    min-height: 60px;
     background: rgba(80, 106, 133, .75) no-repeat 20px 15px;
     opacity: .5;
+
+    @media (max-width: 768px) {
+      min-width: 50px;
+      min-height: 50px;
+      background: rgba(80, 106, 133, .75) no-repeat 20px 10px;
+    }
 
     &:hover {
       opacity: .8;
