--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -80,9 +80,8 @@
     }
 
     @media (max-width: 320px) {
-      max-width: 250px;
       padding-bottom: 15px;
-      font-size: 10px;
+      font-size: 12px;
       line-height: 15px;
       margin: 0;
     }
@@ -158,6 +157,12 @@
       min-width: 50px;
       min-height: 50px;
       background: rgba(80, 106, 133, .75) no-repeat 20px 10px;
+    }
+
+    @media (max-width: 320px) {
+      min-width: 30px;
+      min-height: 30px;
+      background: rgba(80, 106, 133, .75) no-repeat 10px 3px;
     }
 
     &:hover {
