--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -32,5 +32,10 @@
     display: inline-block;
     padding: 16px 27px;
     margin-top: 36px;
+
+    @media (max-width: 320px) {
+      font-size: 12px;
+      padding: 10px 15px;
+    }
   }
 }
