--- a/src/styles/cooperation.less
+++ b/src/styles/cooperation.less
@@ -9,15 +9,30 @@
   @media (max-width: 992px) {
     padding: 90px 0;
   }
+
+  @media (max-width: 320px) {
+    padding: 50px 0;
+  }
   
   &__caption {
     font-size: 44px;
     line-height: 54px;
+
+    @media (max-width: 320px) {
+      font-size: 22px;
+      line-height: 18px;
+    }
   }
   
   &__text {
     margin-top: 23px;
     font-size: 22px;
     line-height: 34px;
+
+    @media (max-width: 320px) {
+      font-size: 18px;
+      line-height: 20px;
+      font-weight: 500;
+    }
   }
 }
