--- a/src/styles/features-list.less
+++ b/src/styles/features-list.less
@@ -64,6 +64,9 @@
 
   @media (max-width: 320px) {
     flex-direction: column;
+    margin-bottom: 50px;
+    font-size: 12px;
+    line-height: 16px;
   }
 
   &__title {
@@ -72,6 +75,8 @@
     line-height: 34px;
 
     @media (max-width: 320px) {
+      font-size: 18px;
+      line-height: 22px;
       margin-bottom: 5px;
       margin-top: 15px;
     }
@@ -89,7 +94,7 @@
     }
 
     @media (max-width: 320px) {
-      max-width: 200px;
+      max-width: 250px;
     }
     
     &::before {
@@ -97,15 +102,22 @@
       position: absolute;
       top: 0;
       left: -80px;
-      width: 60px;
-      height: 53px;
+      min-width: 60px;
+      min-height: 53px;
       background-repeat: no-repeat;
       background-position: right top;
 
       @media (max-width: 768px) {
         left: -55px;
-        width: 50px;
-        height: 50px;
+        min-width: 50px;
+        min-height: 50px;
+      }
+
+      @media (max-width: 320px) {
+        left: -40px;
+        top: 18px;
+        min-width: 30px;
+        min-height: 30px;
       }
     }
 
