--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -9,9 +9,18 @@
     padding-top: 80px;
   }
 
+  @media (max-width: 320px) {
+    padding-top: 50px;
+  }
+
   &__caption {
     font-size: 44px;
     line-height: 54px;
+
+    @media (max-width: 320px) {
+      font-size: 22px;
+      line-height: 30px;
+    }
   }
 
   &__text {
@@ -29,6 +38,11 @@
       font-size: 22px;
       margin-bottom: 45px;
     }
+
+    @media (max-width: 320px) {
+      font-size: 18px;
+      line-height: 24px;
+    }
   }
 }
 
@@ -44,8 +58,8 @@
 
   &--small {   /*тут у меня сомнения*/
     @media (max-width: 320px) {
-    width: 270px;
-    height: 100px;
+    min-width: 70px;
+    min-height: 70px;
     }
   }
   
@@ -95,6 +109,12 @@
     font-size: 20px;
     line-height: 26px;
 
+    @media (max-width: 320px) {
+      padding-top: 10px;
+      font-size: 14px;
+      line-height: 18px;
+    }
+
     &:hover {
       color: #00bc9c;
     }
@@ -104,6 +124,12 @@
     padding: 7px 0 28px;
     font-size: 14px;
     line-height: 20px;
+
+    @media (max-width: 320px) {
+      padding-bottom: 15px;
+      font-size: 10px;
+      line-height: 14px;
+    }
   }
 
   &__link-text {
@@ -144,7 +170,7 @@
   }
   @media (max-width: 320px) {
     max-width: 100px;
-    bottom: 170px;
+    bottom: 50px;
   }
 
   &__item {
