--- a/src/styles/wrapper-flex.less
+++ b/src/styles/wrapper-flex.less
@@ -27,11 +27,22 @@
     @media (max-width: 992px) {
       padding-bottom: 140px;
     }
+
+    @media (max-width: 320px) {
+      padding-top: 40px;
+      padding-bottom: 80px;
+    }
   }
 
   &--footer-nav {
-    width: 370px;
+    width: 100%;
+    max-width: 370px;
     align-items: center;
+
+    @media (max-width: 320px) {
+      max-width: 318px;
+      padding: 0;
+    }
   }
 
   &--footer-info {
@@ -39,11 +50,12 @@
 
     @media (max-width: 320px) {
       flex-direction: column;
+      margin-bottom: 10px;
     }
   }
 
   &--page-footer {
-    min-height: 83px;
+    min-height: 70px;
     align-items: center;
 
     @media (max-width: 992px) {
@@ -51,8 +63,9 @@
     }
 
     @media (max-width: 320px) {
+      min-height: 40px;
       flex-direction: column;
-      min-height: 45px;
+      margin-right: 0;
     }
   }
 }
