--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -95,7 +95,7 @@
               <div class="container">
                 <h1 class="slider__title">Made for Designers</h1>
                 <p class="slider__text">Create your online portfolio in minutes with
-                  the professionally and lovingly designed REEN</br>
+                  the professionally and lovingly designed REEN
                   website template. Customize your site with versatile
                   and easy to use features.</p>
                 <a class="button button--slider" href="#">Get Started Now</a>
