--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -9,7 +9,7 @@
     padding-top: 80px;
   }
 
-  @media (max-width: 320px) {
+  @media (max-width: 767px) {
     padding-top: 50px;
   }
 
@@ -17,7 +17,7 @@
     font-size: 44px;
     line-height: 54px;
 
-    @media (max-width: 320px) {
+    @media (max-width: 767px) {
       font-size: 22px;
       line-height: 30px;
     }
@@ -34,12 +34,7 @@
       margin-bottom: 45px;
     }
 
-    @media (max-width: 768px) {
-      font-size: 22px;
-      margin-bottom: 45px;
-    }
-
-    @media (max-width: 320px) {
+    @media (max-width: 767px) {
       font-size: 18px;
       line-height: 24px;
     }
@@ -56,8 +51,8 @@
     display: flex;
   }
 
-  &--small {   /*тут у меня сомнения*/
-    @media (max-width: 320px) {
+  &--small {
+    @media (max-width: 767px) {
     min-width: 70px;
     min-height: 70px;
     }
@@ -109,7 +104,7 @@
     font-size: 20px;
     line-height: 26px;
 
-    @media (max-width: 320px) {
+    @media (max-width: 767px) {
       padding-top: 10px;
       font-size: 14px;
       line-height: 18px;
@@ -125,7 +120,7 @@
     font-size: 14px;
     line-height: 20px;
 
-    @media (max-width: 320px) {
+    @media (max-width: 767px) {
       padding-bottom: 15px;
       font-size: 10px;
       line-height: 14px;
@@ -166,9 +161,9 @@
   }
 
   @media (max-width: 992px) {
-    bottom: 100px;
+    bottom: 80px;
   }
-  @media (max-width: 320px) {
+  @media (max-width: 767px) {
     max-width: 100px;
     bottom: 50px;
   }
@@ -180,7 +175,7 @@
     border-radius: 50%;
     background: #506a85;
 
-    @media (max-width: 320px) {
+    @media (max-width: 767px) {
       min-width: 10px;
       min-height: 10px;
     }
@@ -208,7 +203,7 @@
     border-radius: 3px;
     background-size: 8px;
 
-    @media (max-width: 320px) {
+    @media (max-width: 767px) {
       min-width: 15px;
       min-height: 15px;
     }
