--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -8,12 +8,16 @@
     min-height: 886px;
     background-color: #a3b1bf;
 
-    @media (max-width: 992px) {
-      min-height: 686px;
+    @media (max-width: 1200px) {
+      min-height: 560px;
     }
 
-    @media (max-width: 320px) {
-      min-height: 250px;
+    @media (max-width: 992px) {
+      min-height: 462px;
+    }
+
+    @media (max-width: 767px) {
+      min-height: 220px;
     }
   }
 
@@ -34,24 +38,22 @@
   }
 
   &__title {
-    padding-bottom: 10px;
     font-size: 78px;
     line-height: 88px;
     letter-spacing: .06em;
     text-transform: uppercase;
     color: #fff;
 
-    @media (max-width: 992px) {
-      font-size: 58px;
-    }
-
-    @media (max-width: 768px) {
+    @media (max-width: 1200px) {
       font-size: 56px;
     }
 
-    @media (max-width: 320px) {
-      padding-bottom: 0;
-      font-size: 20px;
+    @media (max-width: 992px) {
+      font-size: 44px;
+    }
+
+    @media (max-width: 767px) {
+      font-size: 18px;
       line-height: 20px;
     }
     
@@ -63,26 +65,27 @@
   }
 
   &__text {
-    padding: 30px 0 100px;
+    padding: 60px 0 115px;
     font-size: 24px;
     line-height: 33px;
     letter-spacing: .02em;
     font-weight: normal;
     color: #a3b1bf;
 
+    @media (max-width: 1200px) {
+      font-size: 32px;
+    }
+
     @media (max-width: 992px) {
-      font-size: 22px;
-    }
-
-    @media (max-width: 768px) {
-      font-size: 17px;
+      font-size: 20px;
       line-height: 25px;
+      padding: 20px 0 60px;
     }
 
-    @media (max-width: 320px) {
-      padding-bottom: 15px;
+    @media (max-width: 767px) {
+      padding: 15px 0 25px;
       font-size: 12px;
-      line-height: 15px;
+      line-height: 12px;
       margin: 0;
     }
   }
@@ -103,13 +106,10 @@
   border-radius: 3px;
   background-color: #fff;
 
-  @media (max-width: 768px) {
-    min-width: 125px;
-    min-height: 35px;
-  }
-  @media (max-width: 320px) {
-    min-width: 70px;
-    min-height: 30px;
+  @media (max-width: 767px) {
+    min-width: 50px;
+    min-height: 20px;
+    bottom: -10px;
   }
   
   &__item {
@@ -119,9 +119,9 @@
     border-radius: 50%;
     background: #506a85;
 
-    @media (max-width: 320px) {
-      min-width: 10px;
-      min-height: 10px;
+    @media (max-width: 767px) {
+      min-width: 7px;
+      min-height: 7px;
     }
     
     &:hover {
@@ -153,13 +153,7 @@
     background: rgba(80, 106, 133, .75) no-repeat 20px 15px;
     opacity: .5;
 
-    @media (max-width: 768px) {
-      min-width: 50px;
-      min-height: 50px;
-      background: rgba(80, 106, 133, .75) no-repeat 20px 10px;
-    }
-
-    @media (max-width: 320px) {
+    @media (max-width: 767px) {
       min-width: 30px;
       min-height: 30px;
       background: rgba(80, 106, 133, .75) no-repeat 10px 3px;
