--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -9,7 +9,7 @@
     background-color: #a3b1bf;
 
     @media (max-width: 1200px) {
-      min-height: 560px;
+      min-height: 620px;
     }
 
     @media (max-width: 992px) {
@@ -35,21 +35,43 @@
     &--right {
       text-align: end;
     }
+
+    &--top {
+      top: 30%;
+    }
   }
 
   &__title {
+    display: inline-block;
     font-size: 78px;
-    line-height: 88px;
+    line-height: 80px;
     letter-spacing: .06em;
     text-transform: uppercase;
     color: #fff;
 
+    &--background {
+      padding: 20px 60px;
+      margin-bottom: 5px;
+      background-color: #506a85;
+
+      @media (max-width: 1200px) {
+        padding: 10px 40px;
+        margin-bottom: 3px;
+      }
+
+      @media (max-width: 992px) {
+        padding: 10px 30px;
+      }
+    }
+
     @media (max-width: 1200px) {
-      font-size: 56px;
+      font-size: 58px;
+      line-height: 60px;
     }
 
     @media (max-width: 992px) {
       font-size: 44px;
+      line-height: 40px;
     }
 
     @media (max-width: 767px) {
@@ -65,15 +87,19 @@
   }
 
   &__text {
-    padding: 60px 0 115px;
+    padding: 20px 0 90px;
     font-size: 24px;
     line-height: 33px;
     letter-spacing: .02em;
     font-weight: normal;
     color: #a3b1bf;
 
-    @media (max-width: 1200px) {
-      font-size: 32px;
+    &--grey {
+      color: #506a85;
+    }
+    
+    &--white {
+      color: #fff;
     }
 
     @media (max-width: 992px) {
@@ -87,53 +113,6 @@
       font-size: 12px;
       line-height: 12px;
       margin: 0;
-    }
-  }
-}
-
-.pagination {
-  position: absolute;
-  right: 50%;
-  transform: translateX(50%);
-  bottom: -18px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  min-width: 145px;
-  min-height: 45px;
-  margin: 0 auto;
-  padding: 0 5px;
-  border-radius: 3px;
-  background-color: #fff;
-
-  @media (max-width: 767px) {
-    min-width: 50px;
-    min-height: 20px;
-    bottom: -10px;
-  }
-  
-  &__item {
-    cursor: pointer;
-    min-width: 15px;
-    min-height: 15px;
-    border-radius: 50%;
-    background: #506a85;
-
-    @media (max-width: 767px) {
-      min-width: 7px;
-      min-height: 7px;
-    }
-    
-    &:hover {
-      background-color: #acb7c2;
-    }
-  
-    &--active {
-      background-color: #00bc9c;
-
-      &:hover {
-        background-color: #00bc9c;
-      }
     }
   }
 }
