--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Reen</title>
   </head>
@@ -87,34 +88,80 @@
     </header>
 
     <main>
-      <div class="slider">
-        <ul>
-          <li>
-            <img class="slider__img" src="img/image-1.jpg">
+      <div id="mainslider" class="slider carousel slide" data-ride="carousel">
+        <ul class="carousel-inner">
+          <li class="carousel-item active">
+            <img class="slider__img" src="img/slider-1.jpg">
             <div class="slider__content">
               <div class="container">
                 <h1 class="slider__title">Made for Designers</h1>
                 <p class="slider__text">Create your online portfolio in minutes with
-                  the professionally and lovingly designed REEN
+                  the professionally and lovingly designed REEN 
                   website template. Customize your site with versatile
                   and easy to use features.</p>
                 <a class="button button--slider" href="#">Get Started Now</a>
               </div>
             </div>
           </li>
+          <li class="carousel-item">
+            <img class="slider__img" src="img/slider-2.jpg">
+            <div class="slider__content slider__content--right">
+              <div class="container">
+                <h1 class="slider__title">Fresh and beautiful design</h1>
+                <p class="slider__text slider__text--white">REEN is designed to showcase your talent and put your work 
+                  in the forefront.<br>Professionally use of typography and layout that fits your content.</p>
+                <a class="button button--slider" href="#">Get Started Now</a>
+              </div>
+            </div>
+          </li>
+          <li class="carousel-item">
+            <img class="slider__img" src="img/slider-3.jpg">
+            <div class="slider__content slider__content--left">
+              <div class="container">
+                <h1 class="slider__title slider__title--background">Clean and</h1><br>
+                <h1 class="slider__title slider__title--background">reusable code</h1>
+                <p class="slider__text slider__text--grey">The clean code allows you to easily copy code blocks
+                   from content<br> modules and past them in different places or layouts.</p>
+                <a class="button button--slider" href="#">Get Started Now</a>
+              </div>
+            </div>
+          </li>
+          <li class="carousel-item">
+            <img class="slider__img" src="img/slider-4.jpg">
+            <div class="slider__content slider__content--right">
+              <div class="container">
+                <h1 class="slider__title slider__title--background">Just focus on</h1><br>
+                <h1 class="slider__title slider__title--background"> your creativity</h1>
+                <p class="slider__text slider__text--white">Take a break from messing around with heavy coding and 
+                  spend your<br> time brainstorming ideas for your next project.</p>
+                <a class="button button--slider" href="#">Get Started Now</a>
+              </div>
+            </div>
+          </li>
+          <li class="carousel-item">
+            <img class="slider__img" src="img/slider-5.jpg">
+            <div class="slider__content slider__content--top">
+              <div class="container">
+                <h1 class="slider__title">Showcase<br> your content</h1>
+                <p class="slider__text">With REEN you have the possibility to create websites for 
+                  various<br> contents quickly and easily. Now it's up to you!</p>
+                <a class="button button--slider" href="#">Get Started Now</a>
+              </div>
+            </div>
+          </li>
         </ul>
 
-        <ul class="pagination">
-            <li class="pagination__item pagination__item--active"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
-            <li class="pagination__item"></li>
+        <ul class="carousel-indicators">
+          <li data-target="#mainslider" data-slide-to="0" class="pagination__item pagination__item--active active"></li>
+          <li data-target="#mainslider" data-slide-to="1" class="pagination__item"></li>
+          <li data-target="#mainslider" data-slide-to="2" class="pagination__item"></li>
+          <li data-target="#mainslider" data-slide-to="3" class="pagination__item"></li>
+          <li data-target="#mainslider" data-slide-to="4" class="pagination__item"></li>
         </ul>
 
         <ul class="arrows">
-          <li class="arrows__icon arrows__icon--left"></li>
-          <li class="arrows__icon arrows__icon--right"></li>
+          <li class="arrows__icon arrows__icon--left" href="#mainslider" role="button" data-slide="prev"></li>
+          <li class="arrows__icon arrows__icon--right" href="#mainslider" role="button" data-slide="next"></li>
         </ul>
       </div>
 
@@ -350,5 +397,8 @@
         </div>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
