smallslider in process

--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -50,18 +50,11 @@
   &:hover .picture__link {
     display: flex;
   }
-
-  &--small {
-    @media (max-width: 767px) {
-    min-width: 70px;
-    min-height: 70px;
-    }
-  }
   
   &--footer {
     width: 125px;
     height: 85px;
-
+    
     @media (max-width: 1200px) {
       width: 115px;
       height: 78px;
@@ -145,6 +138,7 @@
   }
 }
 
+/*
 .pagination-portfolio {
   position: absolute;
   right: 50%;
@@ -168,30 +162,7 @@
     bottom: 50px;
   }
 
-  &__item {
-    cursor: pointer;
-    min-width: 15px;
-    min-height: 15px;
-    border-radius: 50%;
-    background: #506a85;
-
-    @media (max-width: 767px) {
-      min-width: 10px;
-      min-height: 10px;
-    }
-    
-    &:hover {
-      background-color: #acb7c2;
-    }
-    
-    &--active {
-      background-color: #00bc9c;
-      
-      &:hover {
-        background-color: #00bc9c;
-      }
-    }
-  }
+  
   
   &__arrow {
     cursor: pointer;
@@ -220,4 +191,4 @@
       background-image: url(../img/icon-right-open-mini.png);
     }
   }
-}
+}*/
