--- a/src/styles/bootstrap_custom.less
+++ b/src/styles/bootstrap_custom.less
@@ -18,6 +18,23 @@
   background-color: #fff;
   list-style: none;
 
+  &--small {
+    bottom: 130px;
+    background-color: #f2f5f7;
+    
+    @media (max-width: 1200px) {
+      bottom: 150px;
+    }
+  
+    @media (max-width: 992px) {
+      bottom: 80px;
+    }
+    @media (max-width: 767px) {
+      max-width: 100px;
+      bottom: 50px;
+    }
+  }
+
   @media (max-width: 767px) {
     min-width: 80px;
     min-height: 20px;
@@ -33,7 +50,6 @@
     margin-right: 3px;
     margin-left: 3px;
     text-indent: -999px;
-    cursor: pointer;
     border-radius: 50%;
     background: #506a85;
     background-clip: padding-box;
@@ -41,7 +57,6 @@
     border-bottom: 0;
     opacity: .5;
     transition: opacity 0.6s ease;
-
     cursor: pointer;
 
     @media (max-width: 767px) {
