--- a/src/styles/features-list.less
+++ b/src/styles/features-list.less
@@ -59,6 +59,7 @@
 
   @media (max-width: 767px) {
     flex-direction: column;
+    align-items: center;
     margin-bottom: 50px;
     font-size: 12px;
     line-height: 16px;
@@ -81,7 +82,7 @@
     position: relative;
     width: 100%;
     max-width: 270px;
-    margin-left: 90px;
+    margin-left: 60px;
 
     @media (max-width: 767px) {
       max-width: 200px;
