--- a/src/styles/wrapper-flex.less
+++ b/src/styles/wrapper-flex.less
@@ -50,6 +50,7 @@
 
     @media (max-width: 767px) {
       flex-direction: column;
+      align-items: center;
       margin-bottom: 10px;
     }
   }
