--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -96,7 +96,7 @@
               <div class="container">
                 <h1 class="slider__title">Made for Designers</h1>
                 <p class="slider__text">Create your online portfolio in minutes with
-                  the professionally and lovingly designed REEN 
+                  the professionally and lovingly designed REEN <br>
                   website template. Customize your site with versatile
                   and easy to use features.</p>
                 <a class="button button--slider" href="#">Get Started Now</a>
@@ -109,7 +109,7 @@
               <div class="container">
                 <h1 class="slider__title">Fresh and beautiful design</h1>
                 <p class="slider__text slider__text--white">REEN is designed to showcase your talent and put your work 
-                  in the forefront.<br>Professionally use of typography and layout that fits your content.</p>
+                  in the forefront.<br> Professionally use of typography and layout that fits your content.</p>
                 <a class="button button--slider" href="#">Get Started Now</a>
               </div>
             </div>
@@ -121,7 +121,7 @@
                 <h1 class="slider__title slider__title--background">Clean and</h1><br>
                 <h1 class="slider__title slider__title--background">reusable code</h1>
                 <p class="slider__text slider__text--grey">The clean code allows you to easily copy code blocks
-                   from content<br> modules and past them in different places or layouts.</p>
+                   from content <br> modules and past them in different places or layouts.</p>
                 <a class="button button--slider" href="#">Get Started Now</a>
               </div>
             </div>
@@ -133,7 +133,7 @@
                 <h1 class="slider__title slider__title--background">Just focus on</h1><br>
                 <h1 class="slider__title slider__title--background"> your creativity</h1>
                 <p class="slider__text slider__text--white">Take a break from messing around with heavy coding and 
-                  spend your<br> time brainstorming ideas for your next project.</p>
+                  spend your <br> time brainstorming ideas for your next project.</p>
                 <a class="button button--slider" href="#">Get Started Now</a>
               </div>
             </div>
@@ -237,42 +237,106 @@
               </div>
             </div>
           </div>
+          <!---smallslider-->
+          <div id="smallslider" class="slider carousel slide" data-ride="carousel">
+            <ul class="carousel-inner">
+              <li class="carousel-item active">
+                <ul class="wrapper-flex wrapper-flex--portfolio-small">
+                  <li class="picture picture__img--shadow">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-1.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                    </a> 
+                  </li>
+                  <li class="picture picture__img--shadow">
+                    <img class="picture__img" src="img/image-item-2.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                    </a>
+                  </li>
+                  <li class="picture picture__img--shadow">
+                    <img class="picture__img" src="img/image-item-3.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text picture__link-text--small">
+                      Astor & Yancy
+                      </span>
+                    </a>
+                  </li>
+                  <li class="picture picture__img--shadow">
+                    <img class="picture__img" src="img/image-item-4.jpg"> 
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                    </a>
+                  </li>
+                </ul> 
+              </li>
+              <li class="carousel-item">
+                <ul class="wrapper-flex wrapper-flex--portfolio-small">
+                  <li class="picture picture--small">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-3.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                   </a> 
+                  </li>
+                  <li class="picture">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-1.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                    </a>
+                  </li>
+                  <li class="picture">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-3.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text picture__link-text--small">
+                      Astor & Yancy
+                      </span>
+                    </a>
+                  </li>
+                  <li class="picture">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-4.jpg"> 
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                    </a>
+                  </li>
+                </ul> 
+              </li>
+              <li class="carousel-item">
+                <ul class="wrapper-flex wrapper-flex--portfolio-small">
+                  <li class="picture picture--small">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-2.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                   </a> 
+                  </li>
+                  <li class="picture">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-4.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                    </a>
+                  </li>
+                  <li class="picture">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-1.jpg">
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text picture__link-text--small">
+                      Astor & Yancy
+                      </span>
+                    </a>
+                  </li>
+                  <li class="picture">
+                    <img class="picture__img picture__img--shadow" src="img/image-item-3.jpg"> 
+                    <a href="#" class="picture__link">
+                      <span class="picture__link-text">+</span>
+                    </a>
+                  </li>
+                </ul> 
+              </li>
+            </ul>
+          </div>
 
-          <ul class="wrapper-flex wrapper-flex--portfolio-small">
-            <li class="picture picture--small">
-              <img class="picture__img" src="img/image-item-1.jpg">
-              <a href="#" class="picture__link">
-                <span class="picture__link-text">+</span>
-              </a> 
-            </li>
-            <li class="picture">
-              <img class="picture__img" src="img/image-item-2.jpg">
-              <a href="#" class="picture__link">
-                <span class="picture__link-text">+</span>
-              </a>
-            </li>
-            <li class="picture">
-              <img class="picture__img" src="img/image-item-3.jpg">
-              <a href="#" class="picture__link">
-                <span class="picture__link-text picture__link-text--small">
-                  Astor & Yancy
-                </span>
-              </a>
-            </li>
-            <li class="picture">
-              <img class="picture__img" src="img/image-item-4.jpg"> 
-              <a href="#" class="picture__link">
-                <span class="picture__link-text">+</span>
-              </a>
-            </li>
-          </ul> 
-          
-          <ul class="pagination-portfolio">
-            <li class="pagination-portfolio__arrow pagination-portfolio__arrow--left"></li>
-            <li class="pagination-portfolio__item"></li>
-            <li class="pagination-portfolio__item pagination-portfolio__item--active"></li>
-            <li class="pagination-portfolio__item"></li>
-            <li class="pagination-portfolio__arrow pagination-portfolio__arrow--right"></li>
+          <ul class="carousel-indicators">
+            <li data-target="#smallslider" data-slide-to="0" class="pagination__item pagination__item--active active"></li>
+            <li data-target="#smallslider" data-slide-to="1" class="pagination__item active"></li>
+            <li data-target="#smallslider" data-slide-to="2" class="pagination__item"></li>
           </ul>
 
         </div>
