--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -242,19 +242,19 @@
             <ul class="carousel-inner">
               <li class="carousel-item active">
                 <ul class="wrapper-flex wrapper-flex--portfolio-small">
-                  <li class="picture picture__img--shadow">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-1.jpg">
+                  <li class="picture picture__img--scale">
+                    <img class="picture__img" src="img/image-item-1.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
                     </a> 
                   </li>
-                  <li class="picture picture__img--shadow">
+                  <li class="picture picture__img--scale">
                     <img class="picture__img" src="img/image-item-2.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
                     </a>
                   </li>
-                  <li class="picture picture__img--shadow">
+                  <li class="picture picture__img--scale">
                     <img class="picture__img" src="img/image-item-3.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text picture__link-text--small">
@@ -262,7 +262,7 @@
                       </span>
                     </a>
                   </li>
-                  <li class="picture picture__img--shadow">
+                  <li class="picture picture__img--scale">
                     <img class="picture__img" src="img/image-item-4.jpg"> 
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
@@ -272,28 +272,28 @@
               </li>
               <li class="carousel-item">
                 <ul class="wrapper-flex wrapper-flex--portfolio-small">
-                  <li class="picture picture--small">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-3.jpg">
+                  <li class="picture picture__img--scale">
+                    <img class="picture__img" src="img/image-item-3.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
                    </a> 
                   </li>
-                  <li class="picture">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-1.jpg">
+                  <li class="picture  picture__img--scale">
+                    <img class="picture__img" src="img/image-item-1.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
                     </a>
                   </li>
-                  <li class="picture">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-3.jpg">
+                  <li class="picture  picture__img--scale">
+                    <img class="picture__img" src="img/image-item-3.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text picture__link-text--small">
                       Astor & Yancy
                       </span>
                     </a>
                   </li>
-                  <li class="picture">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-4.jpg"> 
+                  <li class="picture  picture__img--scale">
+                    <img class="picture__img picture__img--scale" src="img/image-item-4.jpg"> 
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
                     </a>
@@ -302,28 +302,28 @@
               </li>
               <li class="carousel-item">
                 <ul class="wrapper-flex wrapper-flex--portfolio-small">
-                  <li class="picture picture--small">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-2.jpg">
+                  <li class="picture picture__img--scale">
+                    <img class="picture__img picture__img--scale" src="img/image-item-2.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
                    </a> 
                   </li>
-                  <li class="picture">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-4.jpg">
+                  <li class="picture picture__img--scale">
+                    <img class="picture__img picture__img--scale" src="img/image-item-4.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
                     </a>
                   </li>
-                  <li class="picture">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-1.jpg">
+                  <li class="picture picture__img--scale">
+                    <img class="picture__img picture__img--scale" src="img/image-item-1.jpg">
                     <a href="#" class="picture__link">
                       <span class="picture__link-text picture__link-text--small">
                       Astor & Yancy
                       </span>
                     </a>
                   </li>
-                  <li class="picture">
-                    <img class="picture__img picture__img--shadow" src="img/image-item-3.jpg"> 
+                  <li class="picture picture__img--scale">
+                    <img class="picture__img picture__img--scale" src="img/image-item-3.jpg"> 
                     <a href="#" class="picture__link">
                       <span class="picture__link-text">+</span>
                     </a>
@@ -331,13 +331,12 @@
                 </ul> 
               </li>
             </ul>
+              <ul class="carousel-indicators carousel-indicators--small">
+              <li data-target="#smallslider" data-slide-to="0" class="pagination__item pagination__item--active active"></li>
+              <li data-target="#smallslider" data-slide-to="1" class="pagination__item"></li>
+              <li data-target="#smallslider" data-slide-to="2" class="pagination__item"></li>
+            </ul>
           </div>
-
-          <ul class="carousel-indicators">
-            <li data-target="#smallslider" data-slide-to="0" class="pagination__item pagination__item--active active"></li>
-            <li data-target="#smallslider" data-slide-to="1" class="pagination__item active"></li>
-            <li data-target="#smallslider" data-slide-to="2" class="pagination__item"></li>
-          </ul>
 
         </div>
       </section>
