--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -83,6 +83,22 @@
     display: block;
     width: 100%;
     height: 100%;
+  
+    &--scale {
+      overflow: hidden;
+      width: 250px;
+      height: 185px;
+      transition: all 1s ease-out;
+  
+      &:hover {
+        transform: scale(1.1);
+      }
+
+      @media (max-width: 767px) {
+        width: 90px;
+        height: 70px;
+      }
+    }
   }
   
   &__caption {
@@ -137,58 +153,3 @@
     margin-bottom: 5px;
   }
 }
-
-/*
-.pagination-portfolio {
-  position: absolute;
-  right: 50%;
-  transform: translateX(50%);
-  bottom: 130px;
-  width: 100%;
-  max-width: 160px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  @media (max-width: 1200px) {
-    bottom: 150px;
-  }
-
-  @media (max-width: 992px) {
-    bottom: 80px;
-  }
-  @media (max-width: 767px) {
-    max-width: 100px;
-    bottom: 50px;
-  }
-
-  
-  
-  &__arrow {
-    cursor: pointer;
-    min-width: 30px;
-    min-height: 30px;
-    margin-right: 5px;
-    background: rgba(80, 106, 133,.65) no-repeat center;
-    opacity: .5;
-    border-radius: 3px;
-    background-size: 8px;
-
-    @media (max-width: 767px) {
-      min-width: 15px;
-      min-height: 15px;
-    }
-
-    &:hover {
-      opacity: .8;
-    }
-
-    &--left {
-      background-image: url(../img/icon-left-open-mini.png);
-    }
-
-    &--right {
-      background-image: url(../img/icon-right-open-mini.png);
-    }
-  }
-}*/
