fix some styles

--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -28,7 +28,7 @@
       padding-bottom: 15px;
       padding-top: 30px;
     }
-    
+
     &--margin {
       margin-bottom: 8px;
     }
@@ -154,7 +154,7 @@
     @media (max-width: 767px) {
       line-height: 10px;
     }
-  
+
     &:hover {
       cursor: pointer;
       color: #fff;
@@ -186,15 +186,13 @@
   right: 5px;
   min-width: 40px;
   min-height: 40px;
-  background: rgba(80, 106, 133, .75) no-repeat 12px 15px;
-  background-image: url(../img/icon-up-open-mini.png);
+  background: rgba(80, 106, 133, .75) url(../img/icon-up-open-mini.png) no-repeat 12px 15px;
   border-radius: 3px;
   opacity: .5;
 
   @media (max-width: 767px) {
     top: 14px;
-    background: rgba(80, 106, 133, .75) no-repeat 12px 5px;
-    background-image: url(../img/icon-up-open-mini.png);
+    background: rgba(80, 106, 133, .75) url(../img/icon-up-open-mini.png) no-repeat 12px 5px;
     min-width: 40px;
     min-height: 20px;
   }
