--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -1,7 +1,7 @@
 /*figure*/
 .portfolio {
   position: relative;
-  padding-top: 105px;
+  padding-top: 30px;
   text-align: center;
   background-color: #f2f5f7;
 
@@ -148,8 +148,6 @@
   }
   
   &--footer {
-    margin: 0;
-    margin-right: 5px;
-    margin-bottom: 5px;
+    margin: 0 5px 5px 0;
   }
 }
